--- a/src/app/aircraft-routing/aircraft-routing.component.html
+++ b/src/app/aircraft-routing/aircraft-routing.component.html
@@ -1,16 +1,17 @@
 <html>
-<h5> AIRCRAFT </h5>
-<h6> {{routing.aircraft_routing[0].fos_id}} </h6>
-<br>
-<br>
-<h4> AIRCRAFT ROUTING </h4>
-<hr>
-<br>
-<div class="d-flex flex-row flex-nowrap" style= "width: 100vw; white-space: nowrap; overflow-x: scroll;">
-
+  <h5>AIRCRAFT</h5>
+  <h6>{{ routing.aircraft_routing[0].fos_id }}</h6>
+  <br />
+  <br />
+  <h4>AIRCRAFT ROUTING</h4>
+  <hr />
+  <br />
+  <div
+    class="d-flex flex-row flex-nowrap"
+    style="width: 100vw; white-space: nowrap; overflow-x: scroll"
+  >
     <div *ngFor="let route of routing.aircraft_routing">
-        <aircraft-route [route] = "route"></aircraft-route>
+      <aircraft-route [route]="route"></aircraft-route>
     </div>
-
-</div>
+  </div>
 </html>
